# zsign

./: .dockerignore  .gitattributes  .gitignore  BUILD  CMakeLists.txt  Dockerfile  INSTALL.sh  LICENSE  Package.swift  README.md  README.zh-CN.md  WORKSPACE  archo.cpp  archo.h  build.sh  bundle.cpp  bundle.h  ksign-bai.sh  ksign-linux.sh  ksign-my.sh  ksign.sh  libcklib.dylib  macho.cpp  macho.h  openssl.cpp  openssl.h  plistFormat.py  signing.cpp  signing.h  windows.cmake  xmake.lua  zsign.cpp  zsign_linux
.github/workflows/: build.yml
common/: base64.cpp  base64.h  common.cpp  common.h  json.cpp  json.h  mach-o.h
src/: archo.cpp  archo.h  bundle.cpp  bundle.h  certcheck.cpp  certcheck.h  macho.cpp  macho.h  metadata.cpp  metadata.h  openssl.cpp  openssl.h  signing.cpp  signing.h  zsign.cpp
src/common/: archive.cpp  base64.cpp  base64.h  common.h  fs.cpp  fs.h  json.cpp  json.h  log.cpp  log.h  mach-o.h  sha.cpp  sha.h  timer.cpp  timer.h  util.cpp  util.h  zip.cpp  zip.h
src/include/: ZSign.h
swift/: utils.hpp  utils.mm  zsign.hpp  zsign.mm  zsign.swift
test/dylib/demo/: Makefile  control  demo.m
test/linux/: test.sh
test/macos/: test.sh
test/windows/: test.ps1
zsign.xcodeproj/: project.pbxproj
zsign.xcodeproj/project.xcworkspace/xcuserdata/amu.xcuserdatad/: UserInterfaceState.xcuserstate
zsign.xcodeproj/project.xcworkspace/xcuserdata/key.xcuserdatad/: UserInterfaceState.xcuserstate
zsign.xcodeproj/xcuserdata/amu.xcuserdatad/xcschemes/: xcschememanagement.plist
